# web-app-host

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml
src/: main.rs
src/app/: app_ctx.rs
src/http/: inject_version_middleware.rs  mod.rs  start_up.rs
www-system/: .readme.md
wwwroot/: .readme
